# aam

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BATCHING_INVESTIGATION.md  CLAUDE.md  CONTRIBUTING.md  DEBUG_NAN_TOKEN_LIMIT.md  INSTALL_FIX.md  LAZY_VS_CACHE_ANALYSIS.md  LICENSE  MEMORY_OPTIMIZATION.md  PARALLEL_UNIFRAC_GUIDE.md  README.md  RUN_TESTS.md  SLURM_RESOURCE_ANALYSIS.md  TREE_BATCH_LOADING_COMPARISON.md  UNIFRAC_LOSS_FIX.md  convert.py  csu_comparison  debug_nan_token_limit.py  diagnose_tree_pruner.py  environment.yml  estimate_unifrac_time.py  investigate_all_padding.py  investigate_batching_logic.py  investigate_nucleotide_nan.py  project_installation.md  pyproject.toml  requirements.txt  ty.toml
.agents/: ARCHIVED_TICKETS.md  CATEGORICAL_FEATURE_TICKETS.md  CLEANUP_TICKETS.md  COSMOS_ONBOARDING_TICKETS.md  DOCUMENTATION_TICKETS.md  FUSION_CLEANUP_TICKETS.md  PRETRAIN_BUGFIX_TICKETS.md  PYTORCH_PORTING_TICKETS.md  REGRESSOR_OPTIMIZATION_TICKETS.md  TICKET_OVERVIEW.md  TRAIN_BUGFIX_TICKETS.md  WORKFLOW.md
.github/workflows/: docs.yml  lint.yml
_design_plan/: 00_overview.md  01_biom_loader.md  02_unifrac_computer.md  02_unifrac_loader.md  03_dataset_tokenizer.md  04_core_layers.md  05_transformer.md  06_asv_encoder.md  07_base_sequence_encoder.md  08_sequence_encoder.md  09_sequence_predictor.md  10_training_losses.md  11_training_loop.md  12_cli_interface.md  13_testing.md  14_tensorboard_overlay.md  14_training_features.md  15_categorical_features.md  15_save_best_model.md  16_early_stopping_default.md  16_regressor_optimization.md  17_attention_fusion.md  17_validation_prediction_plots.md  18_fix_nan_nucleotide_predictions.md  19_unifrac_underfitting_analysis.md  20_optimization_plan.md  21_stripe_unifrac_api_investigation.md  21_stripe_unifrac_migration.md  22_sigmoid_saturation_fix.md  FUTURE_WORK.md  INDEX.md  README.md
_design_plan/archive/: 19_unifrac_underfitting_analysis.md  20_optimization_plan.md  22_sigmoid_saturation_fix.md  23_memory_optimization_plan.md
aam/: __init__.py  attention_cli.py  callbacks.py  cli.py  cv_utils.py  exceptions.py  layers.py  logging_config.py  losses.py  utils.py
aam/cli/: __init__.py  __main__.py  predict.py  pretrain.py  rf_baseline.py  train.py  training_utils.py  utils.py
aam/data/: __init__.py  biom_loader.py  categorical.py  dataset.py  normalization.py  tokenizer.py  tree_pruner.py  unifrac.py  unifrac_cache.py  unifrac_loader.py
aam/data_handlers/: __init__.py  combined_generator.py  generator_dataset.py  unifrac_generator.py
aam/data_handlers/tests/: generator_dataset_test.py
aam/models/: __init__.py  asv_encoder.py  attention_pooling.py  base_sequence_encoder.py  categorical_embedder.py  conv_block.py  film.py  fusion.py  memory_utils.py  model_summary.py  position_embedding.py  sample_sequence_encoder.py  sequence_encoder.py  sequence_predictor.py  sequence_regressor.py  taxonomy_encoder.py  transformer.py  transformers.py  unifrac_encoder.py  utils.py
aam/optimizers/: gradient_accumulator.py  loss_scaler.py
aam/scripts/: __init__.py  compute_unifrac_parallel.py
aam/tools/: __init__.py  rocm_attention_diagnostic.py
aam/training/: __init__.py  batch_size_finder.py  distributed.py  evaluation.py  losses.py  lr_finder.py  memory_profiler.py  metrics.py  trainer.py
debug/: BOUNDARY_PREDICTION_ANALYSIS.md  LR_FINDER_GUIDE.md  README.md  SIGMOID_SATURATION_FIX.md  TENSORFLOW_VS_PYTORCH_COMPARISON.md  ZERO_DISTANCE_ANALYSIS.md  compute_unifrac_parallel.py  debug_nan_token_limit.py  investigate_all_padding.py  investigate_all_padding_sequences.md  investigate_attention_pooling_nan.py  investigate_batching_logic.py  investigate_boundary_predictions.py  investigate_hdf5_sample_ids.py  investigate_nucleotide_nan.py  investigate_zero_distance_samples.py
docs/: Makefile  conf.py  getting-started.md  how-it-works.md  index.rst  roadmap.md  user-guide.md
docs/api/: cli.rst  data.rst  models.rst  training.rst
pytorch_porting_plan/: 00_overview.md  01_biom_loader.md  02_unifrac_computer.md  03_dataset_tokenizer.md  04_core_layers.md  05_transformer.md  06_asv_encoder.md  07_base_sequence_encoder.md  08_sequence_encoder.md  09_sequence_predictor.md  09_sequence_regressor.md  10_training_losses.md  11_training_loop.md  12_cli_interface.md  13_testing.md  README.md
scripts/: investigate_stripe_unifrac.py  precompute_stripe_unifrac.py  test_dense_pair.py
scripts/hyperparameter_survey/: SURVEY_PLAN.md  analyze_results.py  run_survey.sh  submit_survey.slurm
tests/: conftest.py  test_asv_encoder.py  test_attention_pooling.py  test_base_sequence_encoder.py  test_batch_size_finder.py  test_biom_loader.py  test_categorical.py  test_categorical_embedder.py  test_cli.py  test_count_embedding.py  test_dataset.py  test_distributed.py  test_film.py  test_fusion.py  test_integration.py  test_losses.py  test_lr_finder.py  test_memory_profiler.py  test_metrics.py  test_normalization.py  test_numerical_validation.py  test_position_embedding.py  test_rf_baseline.py  test_sample_sequence_encoder.py  test_sequence_encoder.py  test_sequence_predictor.py  test_sequence_regressor.py  test_tokenizer.py  test_trainer.py  test_training_utils.py  test_transformer.py  test_tree_pruner.py  test_unifrac.py  test_unifrac_loader.py  test_unifrac_stripe.py
tests/validation/: __init__.py  numerical_validation.py
tests/validation/golden/: forward_outputs.pt  metadata.json  model_weights.pt
