[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[project]
name = "aam"
requires-python = ">= 3.9,<3.13"
dynamic = ["version"]
description = "Deep Learning Method for Microbial Sequencing Data using PyTorch"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Kalen Cantrell", email = "kcantrel@ucsd.edu" },
    { name = "Jonathan Kirkland", email = "jokirkland@ucsd.edu" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: Pytorch"
]
dependencies = [
    "torch >= 2.3.0",
    "numpy",
    "pandas",
    "biom-format",
    "scikit-bio >= 0.6",
    "scikit-learn >= 1.3",
    "scipy >= 1.13.0",
    "click",
    "unifrac",
    "tqdm",
    "tensorboard >= 2.13.0",
    "matplotlib",
]
keywords = ["aam", "pytorch", "deep-learning", "microbiome", "unifrac"]

[project.scripts]
attention = "aam.attention_cli:main"

[project.urls]
"Bug Tracker" = "https://github.com/jbk708/aam/issues"
"Source Code" = "https://github.com/jbk708/aam"


[tool.setuptools.packages.find]
where = ["."]


[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-cov >= 4.0",
    "pytest-xdist >= 3.0",
    "ruff >= 0.1.0",
    "mypy >= 1.0",
]
docs = [
    "sphinx >= 5.0",
    "myst-parser >= 1.0",
    "sphinx-rtd-theme >= 1.0",
]
training = [
    "pytorch-lightning >= 2.0",
    "wandb >= 0.15.0",
    "tensorboard >= 2.13.0",
]
all = [
    "aam[dev,docs,training]",
]


[tool.ruff]
line-length = 128

[tool.ruff.lint]
ignore = ["F841", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["aam"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"
