[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aam"
requires-python = ">= 3.12,<3.13"
dynamic = ["version"]
description = "Deep Learning Method for Microbial Sequencing Data using PyTorch"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Kalen Cantrell", email = "kcantrel@ucsd.edu" },
    { name = "Jonathan Kirkland", email = "jokirkland@ucsd.edu" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: Pytorch"
]
dependencies = [
    "absl-py==2.3.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "alabaster==1.0.0",
    "attrs==25.4.0",
    "babel==2.17.0",
    "biom-format==2.1.17",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "contourpy==1.3.3",
    "coverage==7.13.1",
    "cycler==0.12.1",
    "cython==3.2.4",
    "decorator==5.2.1",
    "docutils==0.22.4",
    "execnet==2.1.2",
    "filelock==3.20.3",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "fsspec==2026.1.0",
    "grpcio==1.76.0",
    "h5py==3.8.0",
    "idna==3.11",
    "imagesize==1.4.1",
    "iniconfig==2.3.0",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "kiwisolver==1.4.9",
    "lightning-utilities==0.15.2",
    "markdown==3.10.1",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "myst-parser==5.0.0",
    "natsort==8.4.0",
    "networkx==3.6.1",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "packaging==26.0",
    "pandas==3.0.0",
    "patsy==1.0.2",
    "pillow==12.1.0",
    "pkgconfig==1.5.5",
    "pluggy==1.6.0",
    "propcache==0.4.1",
    "protobuf==6.33.4",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    "python-dateutil==2.9.0.post0",
    "pytorch-lightning==2.6.0",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "roman-numerals==4.1.0",
    "ruff==0.14.14",
    "scikit-bio==0.6.3",
    "scikit-learn==1.5.2",
    "scipy==1.13.1",
    "setuptools==80.10.1",
    "six==1.17.0",
    "snowballstemmer==3.0.1",
    "sphinx==9.1.0",
    "sphinx-rtd-theme==3.1.0",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "statsmodels==0.14.6",
    "sympy==1.13.1",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "threadpoolctl==3.6.0",
    "torch==2.5.1",
    "torchmetrics==1.8.2",
    "tqdm==4.67.1",
    "triton==3.1.0",
    "ty==0.0.13",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "werkzeug==3.1.5",
    "yarl==1.22.0",
]
keywords = ["aam", "pytorch", "deep-learning", "microbiome", "unifrac"]

[project.scripts]
aam = "aam.cli:main"

[project.urls]
"Bug Tracker" = "https://github.com/jbk708/aam/issues"
"Source Code" = "https://github.com/jbk708/aam"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-cov >= 4.0",
    "pytest-xdist >= 3.0",
    "ruff >= 0.1.0",
    "ty",
]
docs = [
    "sphinx >= 5.0",
    "myst-parser >= 1.0",
    "sphinx-rtd-theme >= 1.0",
]
training = [
    "pytorch-lightning >= 2.0",
    "wandb >= 0.15.0",
    "tensorboard >= 2.13.0",
]
all = [
    "aam[dev,docs,training]",
]

[tool.ruff]
line-length = 128

[tool.ruff.lint]
ignore = ["F841", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v"]

[tool.coverage.run]
source = ["aam"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"

[tool.uv]
required-environments = [ "sys_platform == 'linux' and platform_machine == 'x86_64'" ]




[tool.uv.workspace]
members = [
    ".",
    ".",
    ".",
    ".",
    ".",
]

[tool.uv.sources]
aam = { workspace = true }

[dependency-groups]
dev = [
    "aam[dev,docs]",
]
